--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ CLOUDINARY_API_KEY = "419761523576619"
 CLOUDINARY_SECRET_KEY = "3khaJ2UK_gQwisLffTgjWypjHOM"
 
 # Clerk Setup
-CLERK_WEBHOOK_SECRET = '----- Clerk Webhook Secret -----'
+CLERK_WEBHOOK_SECRET = "whsec_SAkmjyhZKAYdT1rGezmifQir1kR8WZvg"
 CLERK_PUBLISHABLE_KEY = "pk_test_ZW1pbmVudC1lZWwtMy5jbGVyay5hY2NvdW50cy5kZXYk"
 CLERK_SECRET_KEY = "sk_test_I168F7l0apFf73lQyL0CEkpDkTK6fhzmSoYBx5ViDE"
+
